--- a/public/users/css/recherche.css
+++ b/public/users/css/recherche.css
@@ -4,7 +4,7 @@ body {
 
 .container {
     position: absolute;
-    top: 95%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
@@ -53,9 +53,7 @@ body {
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    position: relative;
 }
 
 input {
@@ -91,6 +89,11 @@ input {
 .close:hover {
     width: 30px;
     height: 30px;
+}
+.container a{
+    position: absolute;
+    top: 400px;
+    left:50%;
 }
 
 .hejuru {
